# great-redeemer

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PLAN.md  alembic.ini  docker-compose.yml  pyproject.toml  redeem.py  schema.json
alembic/: env.py
alembic/versions/: 20251004_000001_initial.py  20251006_000002_status_rename.py  20251007_000001_add_performance_indexes.py  20251008_000001_add_source_created_at_unique_gift_codes.py  20251009_000001_backfill_source_created_at.py
codex/: config.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/lib/: base.ts  ui.ts
frontend/src/pages/: Alliances.tsx  App.tsx  CodeDetail.tsx  Codes.tsx  Dashboard.tsx  Monitor.tsx  UserDetail.tsx  Users.tsx
scripts/: captcha_report.py  clear_codes.py  deploy.sh  probe_no_captcha.py  setup_cf_access.py  solve_failures.py
tests/: conftest.py  test_api.py  test_captcha_onnx.py  test_solver.py  test_tasks.py
wos_redeem/: api.py  app.py  auth.py  captcha_solver.py  cf_access.py  db.py  queueing.py  solver.py  tasks.py  utils.py  worker.py
